# rpc-lite

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  client.cpp  server.cpp
lib/: CMakeLists.txt  IClient.h  IServer.h  ThreadSafeQueue.hpp  balancer.cpp  balancer.h  client.cpp  client.h  os.cpp  os.h  rpc-lite.cmake.in  server.cpp  server.h
